gen/v25.1/rpk/rpk-redpanda-tune-list.adoc
= rpk redpanda tune list
:description: rpk redpanda tune list

List available redpanda tuners and check if they are enabled and 
supported by your system

To enable a tuner it must be set in the `redpanda.yaml` configuration file
under rpk section, e.g:

  rpk:
      tune_cpu: true
      tune_swappiness: true

You may use 'rpk redpanda config set' to enable or disable a tuner.

== Usage

[,bash]
----
rpk redpanda tune list [flags]
----

== Flags

[cols="1m,1a,2a"]
|===
|*Value* |*Type* |*Description*

|-r, --dirs |strings |List of *data* directories or places to store data (e.g. /var/vectorized/redpanda/); usually your XFS filesystem on an NVMe SSD device.

|-d, --disks |strings |Lists of devices to tune f.e. 'sda1'.

|-h, --help |- |Help for list.

|-m, --mode |string |Operation Mode: one of: [sq, sq_split, mq].

|-n, --nic |strings |Network Interface Controllers to tune.

|--reboot-allowed |- |Allow tuners to tune boot parameters and request system reboot.

|--config |string |Redpanda or rpk config file; default search paths are `/var/lib/redpanda/.config/rpk/rpk.yaml`, `$PWD/redpanda.yaml`, and `/etc/redpanda/redpanda.yaml`.

|-X, --config-opt |stringArray |Override rpk configuration settings; '-X help' for detail or '-X list' for terser detail.

|--profile |string |rpk profile to use.

|-v, --verbose |- |Enable verbose logging.
|===